--- a/FinishProj.ipynb
+++ b/FinishProj.ipynb
@@ -536,6 +536,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_dynamic_range(img):\n",
+    "    dynamic_range = []\n",
+    "    image = cv2.imread(img, cv2.IMREAD_COLOR)\n",
+    "    pixel_brightness = []\n",
+    "    for x in range (1,480):\n",
+    "        for y in range (1,640):\n",
+    "            try:\n",
+    "                pixel = image[x,y]\n",
+    "                R, G, B = pixel\n",
+    "                brightness = sum([R,G,B])/3\n",
+    "                pixel_brightness.append(brightness)\n",
+    "            except IndexError:\n",
+    "                pass\n",
+    "    dyn_range = round(np.log2(max(pixel_brightness))-np.log2(min((pixel_brightness))), 2)\n",
+    "    dynamic_range.append(dyn_range)\n",
+    "    return dynamic_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def IQA(img_path, img2_path=False):\n",
     "    if img2_path:\n",
     "        colomns = ['SSIM']\n",
@@ -556,7 +580,7 @@
     "        return df_scale, df_interp\n",
     "    \n",
     "    else:\n",
-    "        colomns = ['Noise', 'Brightness', 'Contrast', 'Sharpness', 'BRISQUE']\n",
+    "        colomns = ['Noise', 'Brightness', 'Contrast', 'Sharpness', 'BRISQUE', 'Dynamic Range']\n",
     "        df_scale = pd.DataFrame(index=range(1), columns=colomns)\n",
     "        df_interp = pd.DataFrame(index=range(1), columns=colomns)\n",
     "\n",
@@ -605,6 +629,14 @@
     "            df_interp['BRISQUE'][0] = 'Bad'\n",
     "        else:\n",
     "            df_interp['BRISQUE'][0] = 'Very bad'\n",
+    "            \n",
+    "        df_scale['Dynamic Range'][0] = get_dynamic_range(img_path)\n",
+    "        if df_scale['Dynamic Range'][0] > 14:\n",
+    "            df_interp['Dynamic Range'][0] = 'Full sunlight'\n",
+    "        elif df_scale['Dynamic Range'][0] > 12:\n",
+    "            df_interp['Dynamic Range'][0] = 'Cloudy'\n",
+    "        else:\n",
+    "            df_interp['Dynamic Range'][0] = 'Deep shade'\n",
     "\n",
     "        return df_scale, df_interp"
    ]
